[package]
name = "smt-white-list"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "numeric"] }
dotenv = "0.15.0"
crc = "3.0.0"
log = {version = "0.4", features = ["release_max_level_debug", "max_level_debug"]}
env_logger = "0.9"
hex = "0.4"
failure = "0.1.8"
chrono = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
cota-smt = {package = "cota-smt", git = "https://github.com/nervina-labs/cota-smt", tag = "0.1.0"}